@@ -995,11 +995,17 @@ class IMP_Ajax_Application_Handler_Dynamic extends Horde_Core_Ajax_Application_H
      *   - flagcolor: (string) Background color for flag label.
      *   - flagname: (string) Flag name.
      *
-     * @return boolean  True.
+     * @return object  An object with the following properties:
+     * <pre>
+     *   - success: (boolean) True if successful.
+     * </pre>
      */
     public function createFlag()
     {
         global $injector, $notification;
+
+        $ret = new stdClass;
+        $ret->success = true;
 
         $imp_flags = $injector->getInstance('IMP_Flags');
 
@@ -1007,7 +1013,8 @@ class IMP_Ajax_Application_Handler_Dynamic extends Horde_Core_Ajax_Application_H
             $imp_flags->addFlag($this->vars->flagname);
         } catch (IMP_Exception $e) {
             $notification->push($e, 'horde.error');
-            return true;
+            $ret->success = false;
+            return $ret;
         }
 
         if (!empty($this->vars->flagcolor)) {
@@ -1025,7 +1032,7 @@ class IMP_Ajax_Application_Handler_Dynamic extends Horde_Core_Ajax_Application_H
             IMP_Ajax_Application_ListMessages::addFlagMetadata($this->_base->tasks->$name, IMP_Mailbox::formFrom($this->_vars->mailbox));
         }
 
-        return true;
+        return $ret;
     }
 
 }
