@@ -2,6 +2,7 @@
 v6.1.5-git
 ----------
 
+[mms] Improved error handling when creating a new flag in dynamic view.
 [mms] Make addresses in smartmobile full message header display clickable to
       open a compose window.
 [mms] Don't display empty containers in dynamic folder list (Request #11425).
